--- a/task-d/index.html
+++ b/task-d/index.html
@@ -18,6 +18,7 @@ Date: 2025-10-08
 
     <main>
         <section>
+            <h3>About CSS Selectors</h3>
             <p id="special-message">This paragraph uses an ID selector to stand out from the rest.</p>
             <p>
                 CSS selectors help developers target specific HTML elements for styling. 
